IVYPORTAL-12543: Custom widget for Portal Dashboard - Handled feedback: correct mistakes in document - Handled feedback: Check new/remmoved parameters when load ivy process - Handled feedback: Added auto screenshot - Handled feedback: Added expand/collapse features for combined process widget
Former-commit-id: 1879ebf8a6445636ef4afe5825efdcaa56b33dcf

--- a/AxonIvyPortal/PortalTemplate/webContent/resources/css/dashboard.css
+++ b/AxonIvyPortal/PortalTemplate/webContent/resources/css/dashboard.css
@@ -1066,6 +1066,10 @@ body .dashboard__table--preview.ui-datatable tbody tr.ui-state-hover {
   display: inline;
 }
 
+.widget-configuration.card.custom-widget-configuration {
+  margin-right: 0;
+}
+
 .custom-widget-configuration__user-selection .ui-autocomplete-input.ui-inputfield[size] {
   width: 100%;
 }
